--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Bootstrap Freelancer</title>
 
     <!-- Bootstrap link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css'
+        integrity='sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=='
+        crossorigin='anonymous' />
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Style link -->
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -16,11 +19,15 @@
 <body>
     <header>
         <div class="container-sm bg-dark text-light">
-            <div class="row justify-content-between align-items-center g-2">
-                <div class="col">Start Bootstrap</div>
-                <div class="col"><a class="btn btn-light btn-sm " href="#" role="button">Link</a></div>
-            </div>
+            <div class="row justify-content-between">
+                <div class="col fs-2">Start Bootstrap</div>
+                <div class="col"><button type="button" class="btn btn-outline-light">
+                        <i class="bi bi-list fs-2"></i>
+                    </button>
 
+                </div>
+            </div>
+            <div class="col "></div>
         </div>
 
     </header>
