--- a/index.html
+++ b/index.html
@@ -18,19 +18,32 @@
 
 <body>
     <header>
-        <div class="container-sm bg-dark text-light">
-            <div class="row justify-content-between">
-                <div class="col fs-2">Start Bootstrap</div>
-                <div class="col"><button type="button" class="btn btn-outline-light">
-                        <i class="bi bi-list fs-2"></i>
-                    </button>
-
+        <nav class="navbar navbar-expand-md bg-body-tertiary text-uppercase fw-bold py-4" data-bs-theme="dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-disabled="true">Contact</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="col "></div>
-        </div>
-
+        </nav>
     </header>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js'
+        integrity='sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=='
+        crossorigin='anonymous'></script>
 </body>
 
 </html>
