--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">Portfolio</a>
@@ -41,6 +41,25 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="presentation">
+                <img src="img/avatar.svg" alt="avatar-image">
+            </div>
+        </div>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js'
         integrity='sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=='
         crossorigin='anonymous'></script>
