--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container custom-background">
             <div class="presentation">
                 <img src="img/avatar.svg" alt="avatar-image">
             </div>
