--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     </header>
 
     <main>
-        <div class="container custom-background">
-            <div class="presentation">
-                <img src="img/avatar.svg" alt="avatar-image">
+        <div class="container-fluid custom-background">
+            <div class="row d-flex">
+                <div class="col">
+                    <img src="img/avatar.svg" alt="avatar">
+                    <span class="h1 text-uppercase text-white text-center">Start Bootstrap</span>
+                </div>
             </div>
         </div>
     </main>
