finished presentation section

--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
 
     <main>
         <div class="container-fluid custom-background">
-            <div class="row d-flex">
+            <div class="row">
                 <div class="col">
                     <img src="img/avatar.svg" alt="avatar">
-                    <span class="h1 text-uppercase text-white text-center">Start Bootstrap</span>
+                    <h1 class="text-uppercase text-white text-center mt-4 fw-bold">Start Bootstrap</h1>
+                    <div class="line-w m-auto d-flex align-items-center">
+                        <div class="line-w m-auto d-flex align-items-center">
+                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                            <div class="star-ico"><i class="bi bi-star-fill fs-1 text-light"></i></div>
+                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                        </div>
+                    </div>
+                    <p class="text-white text-uppercase fw-bold text-center mt-3">Graphic artist - Web Designer -
+                        Illustrator
+                    </p>
                 </div>
             </div>
         </div>
