--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary text-uppercase fw-bold py-4" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand ps-2" href="#">Start Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,7 @@
     </header>
 
     <main>
+        <!-- Presentation section -->
         <div class="container-fluid custom-background">
             <div class="row">
                 <div class="col">
@@ -61,6 +62,45 @@
                 </div>
             </div>
         </div>
+
+        <!-- Portfolio section -->
+        <div class="container bg-white">
+            <div class="row">
+                <div class="col">
+                    <h2 class=" text-uppercase text-center mt-4 fw-bold">Portfolio</h2>
+                    <div class="line-w text-dark m-auto d-flex align-items-center">
+                        <div class="line-w m-auto d-flex align-items-center">
+                            <div class="line-h text-dark mx-2"></div>
+                            <div class="star-ico"><i class="bi bi-star-fill fs-1"></i></div>
+                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+        </div>
+
+
     </main>
 
 
