--- a/index.html
+++ b/index.html
@@ -83,22 +83,33 @@
             <div class="col">
                 <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
             </div>
-            <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
-            </div>
-            <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
-            </div>
-            <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
-            </div>
-            <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
-            </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+            </div>
+        </div>
+
 
 
     </main>
