finish portfolio section

--- a/index.html
+++ b/index.html
@@ -78,27 +78,30 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
+        <!-- Images section -->
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/cabin.png" alt="cabin">
             </div>
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/cake.png" alt="cake">
             </div>
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/circus.png" alt="circus">
             </div>
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/game.png" alt="game">
             </div>
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/safe.png" alt="safe">
             </div>
             <div class="col">
-                <img class="my-3 rounded img-fluid" src="img/cabin.png" alt="cabin">
+                <img class="rounded img-fluid" src="img/submarine.png" alt="submarine">
             </div>
         </div>
+
+        <!-- About section -->
+
 
     </main>
 
