--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <header>
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-md bg-body-tertiary text-uppercase fw-bold py-4" data-bs-theme="dark">
             <div class="container">
                 <a class="navbar-brand ps-2" href="#">Start Bootstrap</a>
@@ -79,29 +80,67 @@
             </div>
         </div>
         <!-- Images section -->
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
-            <div class="col">
-                <img class="rounded img-fluid" src="img/cabin.png" alt="cabin">
-            </div>
-            <div class="col">
-                <img class="rounded img-fluid" src="img/cake.png" alt="cake">
-            </div>
-            <div class="col">
-                <img class="rounded img-fluid" src="img/circus.png" alt="circus">
-            </div>
-            <div class="col">
-                <img class="rounded img-fluid" src="img/game.png" alt="game">
-            </div>
-            <div class="col">
-                <img class="rounded img-fluid" src="img/safe.png" alt="safe">
-            </div>
-            <div class="col">
-                <img class="rounded img-fluid" src="img/submarine.png" alt="submarine">
+        <div class="container mb-5">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/cabin.png" alt="cabin">
+                </div>
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/cake.png" alt="cake">
+                </div>
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/circus.png" alt="circus">
+                </div>
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/game.png" alt="game">
+                </div>
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/safe.png" alt="safe">
+                </div>
+                <div class="col">
+                    <img class="rounded img-fluid" src="img/submarine.png" alt="submarine">
+                </div>
             </div>
         </div>
 
         <!-- About section -->
-
+        <div class="container-fluid custom-background">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-uppercase text-white text-center mt-4 fw-bold">About</h1>
+                    <div class="line-w m-auto d-flex align-items-center">
+                        <div class="line-w m-auto d-flex align-items-center">
+                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                            <div class="star-ico"><i class="bi bi-star-fill fs-1 text-light"></i></div>
+                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                        </div>
+                    </div>
+                    <div class="row row row-cols-1 row-cols-sm-2">
+                        <div class="col-6 offset-3 fw-semibold">
+                            <p class="text-white text-center mt-3">Freelancer is a free bootstrap
+                                theme created by Start Bootstrap.
+                                The download includes the
+                                complete source files including
+                                HTML, CSS, and JavaScript as
+                                well as optional LESS stylesheets
+                                for easy customization.
+                            </p>
+                        </div>
+                        <div class="col-6 offset-3 fw-semibold">
+                            <p class="text-white text-center mt-3">
+                                Whether you're a student looking
+                                to showcase your work, a
+                                professional looking to attract
+                                clients, or a graphic artist looking
+                                to share your projects, this
+                                template is the perfect starting
+                                point!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
