added contact me section

--- a/index.html
+++ b/index.html
@@ -65,92 +65,109 @@
         </div>
 
         <!-- Portfolio section -->
-        <div class="container bg-white">
-            <div class="row">
-                <div class="col">
-                    <h2 class=" text-uppercase text-center mt-4 fw-bold">Portfolio</h2>
-                    <div class="line-w text-dark m-auto d-flex align-items-center">
-                        <div class="line-w m-auto d-flex align-items-center">
-                            <div class="line-h text-dark mx-2"></div>
-                            <div class="star-ico"><i class="bi bi-star-fill fs-1"></i></div>
-                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+        <section class="Portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2 class=" text-uppercase text-center mt-4 fw-bold">Portfolio</h2>
+                        <div class="d-flex justify-content-center">
+                            <div class="line-break-container d-flex align-items-center mb-2">
+                                <div class="line-break"></div>
+                                <i class="bi bi-star-fill star-break"></i>
+                                <div class="line-break"></div>
+                            </div>
+                        </div>
+                        <!-- Images section -->
+                        <div class="container mb-5">
+                            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/cabin.png" alt="cabin">
+                                </div>
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/cake.png" alt="cake">
+                                </div>
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/circus.png" alt="circus">
+                                </div>
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/game.png" alt="game">
+                                </div>
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/safe.png" alt="safe">
+                                </div>
+                                <div class="col">
+                                    <img class="rounded img-fluid" src="img/submarine.png" alt="submarine">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Images section -->
-        <div class="container mb-5">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/cabin.png" alt="cabin">
-                </div>
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/cake.png" alt="cake">
-                </div>
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/circus.png" alt="circus">
-                </div>
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/game.png" alt="game">
-                </div>
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/safe.png" alt="safe">
-                </div>
-                <div class="col">
-                    <img class="rounded img-fluid" src="img/submarine.png" alt="submarine">
-                </div>
-            </div>
-        </div>
+        </section>
 
         <!-- About section -->
-        <div class="container-fluid custom-background">
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-uppercase text-white text-center mt-4 fw-bold">About</h1>
-                    <div class="line-w m-auto d-flex align-items-center">
+        <section class="About">
+            <div class="container-fluid custom-background d-flex flex-column align-items-center">
+                <div class=" row">
+                    <div class="col">
+                        <h1 class="text-uppercase text-white text-center mt-4 fw-bold">About</h1>
                         <div class="line-w m-auto d-flex align-items-center">
-                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
-                            <div class="star-ico"><i class="bi bi-star-fill fs-1 text-light"></i></div>
-                            <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                            <div class="line-w m-auto d-flex align-items-center">
+                                <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                                <div class="star-ico"><i class="bi bi-star-fill fs-1 text-light"></i></div>
+                                <div class="line-h bg-white flex-grow-1 mx-2"></div>
+                            </div>
+                        </div>
+                        <div class="row row-cols-1 row-cols-md-2 row-gap-4 justify-content-center">
+                            <div class="col-10 col-sm-5">
+                                <p class="text-white text-center mt-3">Freelancer is a free bootstrap
+                                    theme created by Start Bootstrap.
+                                    The download includes the
+                                    complete source files including
+                                    HTML, CSS, and JavaScript as
+                                    well as optional LESS stylesheets
+                                    for easy customization.
+                                </p>
+                            </div>
+                            <div class="col-10 col-sm-5">
+                                <p class="text-white text-center mt-3">
+                                    Whether you're a student looking
+                                    to showcase your work, a
+                                    professional looking to attract
+                                    clients, or a graphic artist looking
+                                    to share your projects, this
+                                    template is the perfect starting
+                                    point!
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="row row row-cols-1 row-cols-sm-2">
-                        <div class="col-6 offset-3 fw-semibold">
-                            <p class="text-white text-center mt-3">Freelancer is a free bootstrap
-                                theme created by Start Bootstrap.
-                                The download includes the
-                                complete source files including
-                                HTML, CSS, and JavaScript as
-                                well as optional LESS stylesheets
-                                for easy customization.
-                            </p>
-                        </div>
-                        <div class="col-6 offset-3 fw-semibold">
-                            <p class="text-white text-center mt-3">
-                                Whether you're a student looking
-                                to showcase your work, a
-                                professional looking to attract
-                                clients, or a graphic artist looking
-                                to share your projects, this
-                                template is the perfect starting
-                                point!
-                            </p>
+                </div>
+                <div id="download-button">
+                    <button class="btn btn-outline-light mb-4"><i class="bi bi-download"></i> Download</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact me section -->
+        <section class="form">
+            <div class="container d-flex flex-column justify-content-center">
+                <div class="row">
+                    <div class=" col">
+                        <h2 class=" text-uppercase text-center mt-4 fw-bold">Contact me</h2>
+                        <div class="d-flex justify-content-center">
+                            <div class="line-break-container d-flex align-items-center mb-2">
+                                <div class="line-break"></div>
+                                <i class="bi bi-star-fill star-break"></i>
+                                <div class="line-break"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
     </main>
-
-
-
-
-
-
-
-
 
 
 
